Changelog
=========

2.0a5 (unreleased)
------------------

- Don't replace a link if the result is a link [toutpt]


2.0a4 (2013-05-17)
------------------

- Tested compatibility with Plone 4.3. [hvelarde]
- Fixed Javascript typo regarding max height [bouchardsyl]


2.0a3 (2013-04-02)
------------------

- Fix tiles zcml conditional check.
- Use a template for the tile rendering
- Add responsive option to oembed tile


2.0a2 (2013-01-31)
------------------

- Fix Plone4.0 compatibility


2.0a1 (2013-01-29)
------------------

- Can use links inside div.oembed too since tinymce don't apply styles to "a" well [djay]
- Code refactored to use a structure with hostname/[lazy_endpoints]
- Test coverage up to 94 %
- Add spotify endpoint (open.spotify.com)

1.2.5 (2013-01-07)
------------------

- Fix soundcloud provider which can use https
- Add oembed tile if plone.app.tiles is installed
- Add screenr provider
- Add test view endpoints_test_view only available with provided buildout
- Refactor tests to use assertX instead of failUnless
- Add responsive behavior to img, embed and object tag.
- Add itunes.apple.com support (iphone app)
- Add 360.io support (occipital)
- Add issuu.com support

1.2.4 (2013-01-02)
------------------

- Add "proxy-oembed-provider" to make your Plone an oembed proxy consumer and provider
- Add twitteruser (api2embed) and activate api2embed everywhere
- Improve local oembed support for archetypes using primary field
- Update returned html code to make it responsive (taken from fitVids.js)

1.2.3 (2012-08-24)
------------------

- Add support for Soundcloud. [aleGpereira]

1.2.2 (2012-07-10)
------------------

- Make GoogleMaps working with both: maps and mymaps
- PEP8


1.2.1 (2012-04-25)
------------------

- Fix offline mode (when working without internet)

1.2 (2012-03-15)
----------------

- add Plone 4.0.x support

1.1 (2012-02-22)
----------------

- Add collective.oembed.url2embed browser view component