@@ -5,6 +5,7 @@ Changelog
 ------------------
 
 - Don't replace a link if the result is a link [toutpt]
+- Fix kinomap endpoint (no more oembed support -> url2embed) [toutpt]
 
 
 2.0a4 (2013-05-17)
